# GLFW-Vulkan-Example

./: .gitignore  CMakeLists.txt  README.md
include/: application.hpp
include/tiny_obj_loader/: tiny_obj_loader.h
resources/shaders/: compile.sh  frag.glsl  vert.glsl
resources/shaders/compiled/: frag.spv  vert.spv
src/: application.cpp  main.cpp
